--- a/PL/MainPage.xaml
+++ b/PL/MainPage.xaml
@@ -1,8 +1,8 @@
 ﻿<Page
-    x:Class="RssReader.MainPage"
+    x:Class="PL.MainPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:RssReader"
+    xmlns:local="using:PL"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
