--- a/PL/App.xaml
+++ b/PL/App.xaml
@@ -2,7 +2,21 @@
     x:Class="PL.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:common="using:PL.Common"
     xmlns:local="using:PL"
     RequestedTheme="Light">
+
+    <Application.Resources>
+        <!-- Application-specific resources -->
+        <ResourceDictionary>
+            <common:BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
+            <ResourceDictionary.MergedDictionaries>
+                <!--Styles-->
+                <ResourceDictionary Source="/Styles/Styles.xaml" />
+
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
+    </Application.Resources>
+
 
 </Application>
