--- a/PL/AppShell.xaml
+++ b/PL/AppShell.xaml
@@ -3,11 +3,197 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:PL"
+    xmlns:controls="using:PL.Controls"
+    xmlns:common="using:PL.Common"
+    xmlns:viewmodels="using:PL.ViewModel"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d">
+      Background="{ThemeResource SystemControlBackgroundAltHighBrush}"
+      SizeChanged="Root_SizeChanged"
+      KeyDown="AppShell_KeyDown"
+      TabNavigation="Cycle"
+      mc:Ignorable="d">
 
-    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+    <Page.Resources>
 
+        <common:BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
+
+        <DataTemplate x:Key="NavMenuItemTemplate"
+                      x:DataType="local:NavMenuItem">
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="48" />
+                    <ColumnDefinition />
+                </Grid.ColumnDefinitions>
+                <FontIcon x:Name="Glyph"
+                          Glyph="{x:Bind SymbolAsChar}"
+                          VerticalAlignment="Center"
+                          HorizontalAlignment="Center"
+                          FontSize="16"
+                          ToolTipService.ToolTip="{x:Bind Label}" />
+                <TextBlock x:Name="Text"
+                           Grid.Column="1"
+                           Text="{x:Bind Label}"
+                           TextWrapping="NoWrap"
+                           Style="{StaticResource BodyTextBlockStyle}" />
+            </Grid>
+        </DataTemplate>
+
+        <DataTemplate x:Key="FeedsListItemTemplate"
+                      x:DataType="viewmodels:FeedViewModel">
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="48" />
+                    <ColumnDefinition />
+                </Grid.ColumnDefinitions>
+                <Grid Visibility="{x:Bind IsInError, Mode=OneWay, Converter={StaticResource BooleanToVisibilityConverter}}">
+
+                    <FontIcon Glyph="&#xE7BA;"
+                              VerticalAlignment="Center"
+                              HorizontalAlignment="Center"
+                              FontSize="16"
+                              ToolTipService.ToolTip="{x:Bind Description, Mode=OneWay}"
+                              Visibility="{x:Bind IsSelectedInNavList, Mode=OneWay, Converter={StaticResource BooleanToVisibilityConverter}}" />
+
+
+                    <FontIcon Glyph="&#xE7BA;"
+                              VerticalAlignment="Center"
+                              HorizontalAlignment="Center"
+                              FontSize="16"
+                              Foreground="#FFFF8C10"
+                              ToolTipService.ToolTip="{x:Bind Description, Mode=OneWay}"
+                              Visibility="{x:Bind IsSelectedInNavList, Mode=OneWay, ConverterParameter=Reverse, Converter={StaticResource BooleanToVisibilityConverter}}" />
+                </Grid>
+
+                <FontIcon x:Name="Glyph"
+                          Glyph="{x:Bind SymbolAsChar, Mode=OneWay}"
+                          VerticalAlignment="Center"
+                          HorizontalAlignment="Center"
+                          FontSize="16"
+                          ToolTipService.ToolTip="{x:Bind Description, Mode=OneWay}"
+                          Visibility="{x:Bind IsInError, Mode=OneWay, ConverterParameter=Reverse, Converter={StaticResource BooleanToVisibilityConverter}}" />
+
+                <TextBlock x:Name="Text"
+                           Grid.Column="1"
+                           Text="{x:Bind Name, Mode=OneWay}"
+                           TextWrapping="NoWrap"
+                           MaxWidth="210"
+                           TextTrimming="CharacterEllipsis"
+                           Style="{StaticResource BodyTextBlockStyle}" />
+            </Grid>
+        </DataTemplate>
+
+    </Page.Resources>
+
+    <Grid x:Name="LayoutRoot">
+
+        <VisualStateManager.VisualStateGroups>
+            <VisualStateGroup>
+                <VisualState>
+                    <VisualState.StateTriggers>
+                        <AdaptiveTrigger MinWindowWidth="{StaticResource LargeWindowSnapPoint}" />
+                    </VisualState.StateTriggers>
+                    <VisualState.Setters>
+                        <Setter Target="RootSplitView.DisplayMode"
+                                Value="CompactInline" />
+                        <Setter Target="RootSplitView.IsPaneOpen"
+                                Value="True" />
+                    </VisualState.Setters>
+                </VisualState>
+                <VisualState>
+                    <VisualState.StateTriggers>
+                        <AdaptiveTrigger MinWindowWidth="{StaticResource MediumWindowSnapPoint}" />
+                    </VisualState.StateTriggers>
+                    <VisualState.Setters>
+                        <Setter Target="RootSplitView.DisplayMode"
+                                Value="CompactOverlay" />
+                        <Setter Target="RootSplitView.IsPaneOpen"
+                                Value="False" />
+                    </VisualState.Setters>
+                </VisualState>
+                <VisualState>
+                    <VisualState.StateTriggers>
+                        <AdaptiveTrigger MinWindowWidth="{StaticResource MinWindowSnapPoint}" />
+                    </VisualState.StateTriggers>
+                    <VisualState.Setters>
+                        <Setter Target="RootSplitView.DisplayMode"
+                                Value="Overlay" />
+                        <Setter Target="RootSplitView.IsPaneOpen"
+                                Value="False" />
+                    </VisualState.Setters>
+                </VisualState>
+            </VisualStateGroup>
+        </VisualStateManager.VisualStateGroups>
+
+        <!-- Top-level navigation menu + app content -->
+        <SplitView x:Name="RootSplitView"
+                   DisplayMode="CompactInline"
+                   OpenPaneLength="280"
+                   IsTabStop="False">
+            <SplitView.Pane>
+                <Grid Background="{ThemeResource Background100OffWhiteBrush}">
+                    <Grid.RowDefinitions>
+                        <RowDefinition />
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                    </Grid.RowDefinitions>
+
+                    <controls:NavMenuListView x:Name="FeedsList"
+                                              Margin="0,48,0,0"
+                                              ItemsSource="{x:Bind ViewModel.FeedsWithFavorites, Mode=OneWay}"
+                                              TabIndex="3"
+                                              ContainerContentChanging="FeedsListItemContainerContentChanging"
+                                              SelectionChanged="FeedsList_SelectionChanged"
+                                              ItemInvoked="FeedsList_ItemInvoked"
+                                              ItemContainerStyle="{StaticResource NavMenuItemContainerStyle}"
+                                              ItemTemplate="{StaticResource FeedsListItemTemplate}" />
+                    <Rectangle x:Name="NavPaneDivider"
+                               Grid.Row="1"
+                               Margin="0"
+                               Width="280"
+                               Height="1"
+                               HorizontalAlignment="Stretch"
+                               Fill="{ThemeResource Border100PaleRoseBrush}" />
+                    <controls:NavMenuListView x:Name="NavMenuList"
+                                              Grid.Row="2"
+                                              Margin="0"
+                                              ItemsSource="{x:Bind NavList}"
+                                              TabIndex="4"
+                                              ContainerContentChanging="NavMenuItemContainerContentChanging"
+                                              ItemInvoked="NavMenuList_ItemInvoked"
+                                              ItemContainerStyle="{StaticResource NavMenuItemContainerStyle}"
+                                              ItemTemplate="{StaticResource NavMenuItemTemplate}" />
+                </Grid>
+            </SplitView.Pane>
+            <SplitView.Content>
+
+                <Frame x:Name="AppShellFrame"
+                       Margin="0"
+                       Navigating="OnNavigatingToPage"
+                       Navigated="OnNavigatedToPage"
+                       Background="White">
+                    <Frame.ContentTransitions>
+                        <TransitionCollection>
+                            <NavigationThemeTransition>
+                                <NavigationThemeTransition.DefaultNavigationTransitionInfo>
+                                    <EntranceNavigationTransitionInfo />
+                                </NavigationThemeTransition.DefaultNavigationTransitionInfo>
+                            </NavigationThemeTransition>
+                        </TransitionCollection>
+                    </Frame.ContentTransitions>
+                </Frame>
+            </SplitView.Content>
+        </SplitView>
+
+        <ToggleButton x:Name="TogglePaneButton"
+                      Visibility="{x:Bind ViewModel.IsInDetailsMode, Mode=OneWay, ConverterParameter=Reverse, Converter={StaticResource BooleanToVisibilityConverter}}"
+                      Margin="0"
+                      TabIndex="1"
+                      Checked="{x:Bind CheckTogglePaneButtonSizeChanged}"
+                      Unchecked="{x:Bind CheckTogglePaneButtonSizeChanged}"
+                      IsChecked="{Binding IsPaneOpen, ElementName=RootSplitView, Mode=TwoWay}"
+                      AutomationProperties.Name="Menu"
+                      ToolTipService.ToolTip="Menu"
+                      Style="{StaticResource SplitViewTogglePaneButtonStyle}" />
     </Grid>
 </Page>
