--- a/PL/Styles/Styles.xaml
+++ b/PL/Styles/Styles.xaml
@@ -24,7 +24,7 @@
 
 <ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:local="using:RssReader">
+                    xmlns:local="using:PL">
 
     <ResourceDictionary.ThemeDictionaries>
 
